--- a/animals.html
+++ b/animals.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="UTF-8" />
         <style>
         @gray-darker:               #444444;
         @gray-dark:                 #696969;
@@ -67,71 +68,71 @@
     <body>
         <h1>My Animal Repository</h1>
         <ul class="cards">
-<li class="cards__item"><div class="cards__title">American Foxhound<br/>
+<li class="cards__item"><div class="card__title">American Foxhound<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> North-America<br/>
 <strong>Type:</strong> Hound<br/>
-</p></li><li class="cards__item"><div class="cards__title">Arctic Fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Arctic Fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Carnivore<br/>
 <strong>Location:</strong> Eurasia<br/>
 <strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="cards__title">Cross Fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Cross Fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Carnivore<br/>
 <strong>Location:</strong> North-America<br/>
 <strong>Type:</strong> mammal<br/>
-</p></li><li class="cards__item"><div class="cards__title">Darwin’s fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Darwin’s fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> South-America<br/>
 <strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="cards__title">English Foxhound<br/>
+</p></li><li class="cards__item"><div class="card__title">English Foxhound<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Europe<br/>
-</p></li><li class="cards__item"><div class="cards__title">Fennec Fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Fennec Fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Africa<br/>
-</p></li><li class="cards__item"><div class="cards__title">Fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Carnivore<br/>
 <strong>Location:</strong> Africa<br/>
 <strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="cards__title">Fox Snakes<br/>
+</p></li><li class="cards__item"><div class="card__title">Fox Snakes<br/>
 </div><p class="card__text"><strong>Diet:</strong> Carnivore<br/>
 <strong>Location:</strong> North-America<br/>
-</p></li><li class="cards__item"><div class="cards__title">Fox Squirrel<br/>
+</p></li><li class="cards__item"><div class="card__title">Fox Squirrel<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Central-America<br/>
 <strong>Type:</strong> rodent<br/>
-</p></li><li class="cards__item"><div class="cards__title">Fox Terrier<br/>
+</p></li><li class="cards__item"><div class="card__title">Fox Terrier<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Europe<br/>
-</p></li><li class="cards__item"><div class="cards__title">Golden-Crowned Flying Fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Golden-Crowned Flying Fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Herbivore<br/>
 <strong>Location:</strong> Asia<br/>
-</p></li><li class="cards__item"><div class="cards__title">Gray Fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Gray Fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Central-America<br/>
 <strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="cards__title">Kit Fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Kit Fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Central-America<br/>
 <strong>Type:</strong> mammal<br/>
-</p></li><li class="cards__item"><div class="cards__title">Marble Fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Marble Fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> North-America<br/>
 <strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="cards__title">Red Fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Red Fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Africa<br/>
-</p></li><li class="cards__item"><div class="cards__title">Smooth Fox Terrier<br/>
+</p></li><li class="cards__item"><div class="card__title">Smooth Fox Terrier<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Europe<br/>
-</p></li><li class="cards__item"><div class="cards__title">Tibetan Fox<br/>
+</p></li><li class="cards__item"><div class="card__title">Tibetan Fox<br/>
 </div><p class="card__text"><strong>Diet:</strong> Carnivore<br/>
 <strong>Location:</strong> Asia<br/>
 <strong>Type:</strong> Mammal<br/>
-</p></li><li class="cards__item"><div class="cards__title">Toy Fox Terrier<br/>
+</p></li><li class="cards__item"><div class="card__title">Toy Fox Terrier<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> North-America<br/>
-</p></li><li class="cards__item"><div class="cards__title">Wire Fox Terrier<br/>
+</p></li><li class="cards__item"><div class="card__title">Wire Fox Terrier<br/>
 </div><p class="card__text"><strong>Diet:</strong> Omnivore<br/>
 <strong>Location:</strong> Europe<br/>
 </p></li>
